---
source: lore-parser/src/validator.rs
expression: snapshot

---

input:
    
        prefix spotify:kind:artist as @Artist
        prefix spotify:kind:song as @Song
        prefix spotify:rel:hasOne as @hasOne
        prefix spotify:rel:hasMany as @hasMany

        rel @Artist @hasOne @Name
        rel @Artist @isAuthorOf @Song
        rel @Band @hasMany @Song
        

output:

Err(
    [
        UnresolvedName(
            Name {
                alias: None,
                uri: URI(
                    "@Name",
                ),
            },
        ),
        UnresolvedName(
            Name {
                alias: None,
                uri: URI(
                    "@isAuthorOf",
                ),
            },
        ),
        UnresolvedName(
            Name {
                alias: None,
                uri: URI(
                    "@Band",
                ),
            },
        ),
    ],
)

